# manipdraw

./: .gitignore  .gitmodules
shaders/src/: Makefile  generic.vert  paint.frag  resolve.frag
src/: CMakeLists.txt  manipdraw.c
